syntax = "proto3";

package itemsPackage;

import "google/protobuf/empty.proto";

service ItemsService {
  rpc addOne(ItemNoId) returns (Item);
  rpc getOne(ItemId) returns (Item);
  rpc deleteOne(ItemId) returns (ItemId);
  rpc streamAll(google.protobuf.Empty) returns (stream Item);
}

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  bool isBought = 5;
}

message ItemNoId {
  string name = 1;
  string description = 2;
  double price = 3;
  bool isBought = 4;
}

message ItemId {
  string id = 1;
}

